# ESP_NOW_Slave

./: CMakeLists.txt  default_8MB.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-n8r2  sdkconfig.slave
src/: CMakeLists.txt  main.cpp  shared_types.h
src/common/: mt6701_ssi_sensor.cpp  mt6701_ssi_sensor.h  system_state.cpp  system_state.h
src/common/app/: mode_capability.h
src/common/math/: angle_math.h  axis_math.h  clamp.h  filters.h
src/common/motion/: paper_mapper.h
src/common/protocol/: common_contract_version.h  packet_codec.h  protocol_types.h  protocol_units.h
src/common/sensors/: mt6701_ssi_sensor.cpp  mt6701_ssi_sensor.h
src/common/state/: fault_flags.h  link_state.h  shared_data.h  system_state.h
src/common/timing/: link_timing.h  loop_timing.h
src/drivers/: mt6701_ssi_sensor.cpp  mt6701_ssi_sensor.h
src/slave/: slave_config.cpp  slave_config.h  slave_hardware.cpp  slave_hardware.h  slave_motion.cpp  slave_motion.h  slave_safety.cpp  slave_safety.h  slave_status.cpp  slave_status.h  slave_tasks.cpp  slave_tasks.h  slave_transport.cpp  slave_transport.h
src/slave/comm/: slave_transport.cpp  slave_transport.h
src/slave/config/: slave_build_options.h  slave_comm_config.h  slave_config.cpp  slave_config.h  slave_config_validate.h  slave_control_config.h  slave_hardware_config.h  slave_log_config.h  slave_task_config.h
src/slave/control/: slave_auto_draw_runtime.cpp  slave_auto_draw_runtime.h  slave_axis_controller.h  slave_coordinate_mapper.cpp  slave_coordinate_mapper.h  slave_motion.cpp  slave_motion.h  slave_motion_state.cpp  (+4 more)
(+58 files in other folders)
